refactor: eliminar code smells y mejorar calidad del código